--- a/css/header.css
+++ b/css/header.css
@@ -15,11 +15,11 @@
     position: relative;
     height: 100%;
     width: 100%;
+    justify-content: space-between;
 }
 
 .navigation {
     height: 100%;
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -55,7 +55,8 @@
 }
 
 .mobile-menu.is-open {
-    display: block;
+    display: flex;
+    flex-direction: column;
     top: 0;
     left: 0;
 }
@@ -136,6 +137,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 40px;
+    margin-bottom: 168px;
 }
 
 .mobile-menu-nav-ul a {
@@ -149,6 +151,50 @@
 
 .mobile-menu-nav-ul a.studio {
     color: #404BBF;
+}
+
+.mobile-menu-address ul {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    margin-bottom: 48px;
+}
+.mobile-menu-address a {
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.4px;
+    color: #434455;
+}
+
+.mobile-menu-address .blue {
+    color: #4D5AE5;
+}
+
+.mobile-menu-social-icon {
+    display: flex;
+    gap: 40px;
+}
+
+.mobile-menu-social-icon .social-icon-li a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4D5AE5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-social-icon .social-icon-li svg {
+    fill: #f4f4fd;
+}
+
+.mobile-menu-social-icon .social-icon-li a:hover, .a:focus {
+    background-color: #404bbf;
 }
 
 @media screen and (min-width: 768px) {
