--- a/css/section-one.css
+++ b/css/section-one.css
@@ -1,3 +1,21 @@
+.section-one {
+    width: 100%;
+    background-color: #2e2f42;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    max-width: 320px;
+    max-height: 432px;
+    margin: 0 auto;
+}
+
+
+
+
+
 /* .section-one {
     width: 100%;
     background-color: #2e2f42;
