--- a/css/header.css
+++ b/css/header.css
@@ -25,6 +25,12 @@
     justify-content: space-between;
 }
 
+@media screen and (max-width: 768px) {
+    .navigation {
+        width: 100%;
+    }
+}
+
 .nav-logo {
     color: #4d5ae5;
     font-family: 'Raleway', sans-serif;
@@ -63,6 +69,7 @@
 
 .burger-div {
     z-index: 1001;
+    margin-left: auto;
 }
 
 #burger {
