--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,13 @@ body {
     font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: #FFFFFF;
+    padding-top: 56px;
+}
+
+@media screen and (min-width: 768px) {
+    body {
+        padding-top: 72px;
+    }
 }
 
 a {
