--- a/css/section-one.css
+++ b/css/section-one.css
@@ -7,14 +7,70 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    max-width: 320px;
-    max-height: 432px;
+    padding-top: 72px;
+    padding-bottom: 72px;
     margin: 0 auto;
 }
 
+.section-one-main-text {
+    font-size: 36px;
+    line-height: 40px;
+    text-align: center;
+    letter-spacing: 0.72px;
+    color: #ffffff;
+    max-width: 496px;
+    margin: auto;
+    margin-bottom: 72px;
+    text-transform: capitalize;
+    padding: 0 35px 0 35px;
+}
 
+.main-button {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    background-color: #4d5ae5;
+    border-radius: 4px;
+    display: block;
+    margin: auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
+.main-button:hover, button:focus {
+    background-color: #404BBF;
+}
 
+@media screen and (min-width: 768px) {
+    .section-one {
+        padding-top: 112px;
+        padding-bottom: 112px;
+    }
+
+    .section-one-main-text {
+        padding: 0;
+    }
+
+    .section-one-main-text {
+        font-size: 56px;
+        line-height: 60px;
+        letter-spacing: 1.12px;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .section-one {
+        padding-top: 188px;
+        padding-bottom: 188px;
+    }
+}
 
 /* .section-one {
     width: 100%;
@@ -30,16 +86,7 @@
     margin: 0 auto;
 }
 
-.section-one-main-text {
-    font-size: 56px;
-    line-height: 1.07;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: #ffffff;
-    max-width: 496px;
-    margin: auto;
-    margin-bottom: 48px;
-}
+
 
 .main-button {
     font-family: "Roboto", sans-serif;
