--- a/css/section-three.css
+++ b/css/section-three.css
@@ -1,6 +1,6 @@
-/* .section-three {
+.section-three {
     background-color: #F4F4FD;
-    padding: 120px 0;
+    padding: 96px 0;
 }
 
 .section-three-main-text {
@@ -14,20 +14,26 @@
 
 .section-three-ul {
     display: flex;
-    gap: 24px;
-    columns: 3;
+    flex-direction:  column;
+    gap: 72px;
+    align-items: center;
 }
 
 .section-three-li {
+    display: flex;
+    width: 264px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
     background-color: #FFFFFF;
-    flex-basis: calc((100% - 3 * 24px) / 4);
     border-radius: 0px 0px 4px 4px;
-    padding: 0 0;
+    padding: 0;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .section-three-li-div {
-    padding: 32px 0;
+    padding-bottom: 32px;
 }
 
 .section-three-text {
@@ -74,4 +80,13 @@
 
 .social-team-li a:focus {
     background-color: #404BBF;
-} */
+}
+
+@media screen and (min-width: 768px) {
+    .section-three-ul {
+        flex-direction:  row;
+        flex-wrap: wrap;
+        row-gap: 72px;
+        column-gap: 24px;
+    }
+}
