--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,4 @@
-/* .footer {
+.footer {
     background-color: #2e2f42;
     padding: 100px 0;
 }
@@ -7,6 +7,16 @@
     display: flex;
     align-items: baseline;
 }
+
+
+
+
+
+
+
+/* 
+
+
 
 .href-and-logo_div{
     min-width: 264px;
