--- a/css/section-four.css
+++ b/css/section-four.css
@@ -1,16 +1,29 @@
-/* .section-four {
-    padding: 120px 0
+.section-four {
+    padding: 96px 0
+}
+
+.section-four img {
+    width: 288px;
+    height: 280px;
+}
+
+.section-four-main-text {
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    margin-bottom: 72px;
 }
 
 .section-four-ul {
     display: flex;
-    flex-wrap: wrap;
-    column-gap: 24px;
-    row-gap: 48px;
+    flex-direction: column;
+    gap: 48px;
 }
 
 .section-four-li {
-    width: calc((100% - 48px) / 3);
+    width: 288px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -22,15 +35,6 @@
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-}
-
-.section-four-main-text {
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    margin-bottom: 72px;
 }
 
 .section-four-text {
@@ -69,4 +73,43 @@
 
 .section-four-li:hover .section-four-img_div .p-text {
     transform: translateY(0%);
-} */
+}
+
+@media screen and (min-width: 768px) {
+    .section-four-ul {
+        flex-direction:  row;
+        flex-wrap: wrap;
+        row-gap: 72px;
+        column-gap: 24px;
+        align-items: center;
+        width: 736px;
+    }
+
+    .section-four img {
+        width: 356px;
+        height: 300px;
+    }
+
+    .section-four-li {
+        width: 356px;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .section-four {
+        padding: 120px 0
+    }
+
+    .section-four-ul {
+        width: 1128px;
+    }
+
+    .section-four img {
+        width: 360px;
+        height: 300px;
+    }
+
+    .section-four-li {
+        width: 360px;
+    }
+}
