--- a/css/section-three.css
+++ b/css/section-three.css
@@ -88,5 +88,19 @@
         flex-wrap: wrap;
         row-gap: 72px;
         column-gap: 24px;
+        align-items: center;
+        width: 552px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .section-three-ul {
+        width: 1128px;
+    }
+
+    .section-three {
+        padding: 120px 0;
     }
 }
