--- a/css/main-form-div.css
+++ b/css/main-form-div.css
@@ -1,8 +1,10 @@
+
+
 /* .is-hidden {
     opacity: 0; 
     pointer-events: none; 
     visibility: hidden;
-}
+} */
 
 .main-form-div {
     z-index: 10000;
@@ -17,14 +19,14 @@
 
 .form-content {
     background-color: #FCFCFC;
-    width: 408px;
-    min-height: 584px;
+    width: 288px;
+    min-height: 623px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     border-radius: 4px;
-    padding: 24px;
+    padding: 16px;
     padding-top: 72px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -135,6 +137,8 @@
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8E8F99;
+    display: flex;
+    align-items: center;
 }
 
 .div-checkbox .label-text a {
@@ -154,7 +158,7 @@
     display: inline-flex;
 }
 
-.div-checkbox span {
+.div-checkbox .checkbox-span {
     width: 16px;
     height: 16px;
     border: 1px solid rgba(46, 47, 66, 0.4);
@@ -165,9 +169,10 @@
     align-items: center;
     fill: transparent;
     margin-right: 8px;
+    flex-shrink: 0;
 }
 
-.div-checkbox input:checked + label > span {
+.div-checkbox input:checked + label > .checkbox-span {
     background-color: #404bbf;
     border: none;
     fill: #F4F4FD;
@@ -243,4 +248,17 @@
 
 .icon-close {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+}
+
+@media screen and (min-width: 550px) {
+    .form-content {
+        width: 408px;
+        min-height: 584px;
+        padding: 24px;
+        padding-top: 72px;
+    }
+
+    .div-checkbox label a {
+        margin-left: unset;
+    }
+}
