--- a/css/main-form-div.css
+++ b/css/main-form-div.css
@@ -1,10 +1,8 @@
-
-
-/* .is-hidden {
+.is-hidden {
     opacity: 0; 
     pointer-events: none; 
     visibility: hidden;
-} */
+}
 
 .main-form-div {
     z-index: 10000;
