--- a/css/header.css
+++ b/css/header.css
@@ -144,7 +144,6 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 40px;
-    margin-bottom: 168px;
 }
 
 .mobile-menu-nav-ul a {
@@ -158,6 +157,10 @@
 
 .mobile-menu-nav-ul a.studio {
     color: #404BBF;
+}
+
+.mobile-menu-address {
+    margin-top: auto;
 }
 
 .mobile-menu-address ul {
@@ -205,6 +208,11 @@
 }
 
 @media screen and (min-width: 768px) {
+    .mobile-menu.is-open {
+        top: 0;
+        display: none;
+    }
+
     .burger-div {
         display: none;
     }
