--- a/css/main-form-div.css
+++ b/css/main-form-div.css
@@ -98,7 +98,7 @@
 }
 
 .label-div .comment-text  {
-    width: 360px;
+    width: 100%;
     height: 120px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
@@ -248,7 +248,7 @@
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 550px) {
+@media screen and (min-width: 768px) {
     .form-content {
         width: 408px;
         min-height: 584px;
