--- a/css/section-one.css
+++ b/css/section-one.css
@@ -1,5 +1,6 @@
 .section-one {
     width: 100%;
+    max-width: 320px;
     background-color: #2e2f42;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
@@ -52,6 +53,7 @@
     .section-one {
         padding-top: 112px;
         padding-bottom: 112px;
+        max-width: 768px;
     }
 
     .section-one-main-text {
@@ -62,6 +64,7 @@
         font-size: 56px;
         line-height: 60px;
         letter-spacing: 1.12px;
+        margin-bottom: 36px;
     }
 }
 
@@ -69,44 +72,6 @@
     .section-one {
         padding-top: 188px;
         padding-bottom: 188px;
+        max-width: 1440px;
     }
 }
-
-/* .section-one {
-    width: 100%;
-    background-color: #2e2f42;
-    padding: 188px 0;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-    rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
-    position: relative;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    max-width: 1440px;
-    margin: 0 auto;
-}
-
-
-
-.main-button {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-    cursor: pointer;
-    display: block;
-    min-width: 169px;
-    height: 56px;
-    border: none;
-    background-color: #4d5ae5;
-    border-radius: 4px;
-    display: block;
-    margin: auto;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.main-button:hover, button:focus {
-    background-color: #404BBF;
-} */
